# VocT

./: .gitignore  CMakeLists.txt  Doxyfile
Dictionary/: CMakeLists.txt  Db.cpp  Dictionary.cpp  Dictionary.h
Menu/: CMakeLists.txt  Menu.cpp  Menu.h  SimpleListMenuImpl.cpp  SimpleListMenuImpl.h
Receiver/: CMakeLists.txt  Receiver.cpp  Receiver.h
common/: CMakeLists.txt  Log.cpp  Log.h  _thread.cpp  _thread.h  _utility.cpp  _utility.h  common.h  libcjson.so.1.7.16  messages.h  utility.cpp
src/: CMakeLists.txt  main.cpp
